ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fastapi-ingress
  namespace: demo

spec:
  ingressClassName: nginx

  rules:
    - host: fastapi.local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: fastapi-service
                port:
                  number: 80
